# nitrogen-finetuner

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  lint.yml
src/: __init__.py  config.py  data.py  train.py
src/nitrogen/: config.py  model.py  modules.py  tokenizer.py
tests/: conftest.py  test_config.py  test_data.py  test_train.py
